--- a/404.html
+++ b/404.html
@@ -1,1 +1,32 @@
-test
+<!-- This templates was made by Colorlib (https://colorlib.com) -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>깃메봇 - 404</title>
+
+    <link rel="stylesheet" href="./resource/css/404.css"/>
+
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+<div id="notfound">
+    <div class="notfound">
+        <div class="notfound-404">
+            <h1>Oops!</h1>
+        </div>
+        <h2 style="margin-top: 30px;">없는 페이지에요 :(</h2>
+        <a href="index.html" style="margin-top: 15px;">메인 페이지로</a>
+    </div>
+</div>
+</body>
+</html>
