--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>깃메봇 - 메인</title>
+
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="yes" name="apple-mobile-web-app-capable">
+
+    <meta content="GitMessengerBot - Homepage" property="og:title"/>
+    <meta content="website" property="og:type"/>
+    <meta content="깃메봇 공식 사이트" property="og:description"/>
+    <meta content="https://gitmessengerbot.xyz" property="og:url"/>
+<!--    <meta content="https://github.com/jisungbin/sungbin.me/blob/master/assets/images/sungbin_with_mac.png?raw=true"-->
+<!--          property="og:image"/>-->
+
+    <link rel="stylesheet" href="./resource/css/index.css"/>
 </head>
 <body>
 
