--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta content="website" property="og:type"/>
     <meta content="깃메봇 공식 사이트" property="og:description"/>
     <meta content="https://gitmessengerbot.xyz" property="og:url"/>
-<!--    <meta content="https://github.com/jisungbin/sungbin.me/blob/master/assets/images/sungbin_with_mac.png?raw=true"-->
-<!--          property="og:image"/>-->
+    <meta content="" property="og:image"/>
 
     <link rel="stylesheet" href="./resource/css/index.css"/>
 </head>
