--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <title>깃메봇 - 메인</title>
+    <title>GitMessengerBot 👍</title>
 
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
     <meta content="telephone=no" name="format-detection">
     <meta content="yes" name="apple-mobile-web-app-capable">
 
-    <meta content="GitMessengerBot - Homepage" property="og:title"/>
+    <meta content="GitMessengerBot 👍" property="og:title"/>
     <meta content="website" property="og:type"/>
     <meta content="깃메봇 공식 사이트" property="og:description"/>
     <meta content="https://gitmessengerbot.xyz" property="og:url"/>
-    <meta content="" property="og:image"/>
+    <meta content="https://raw.githubusercontent.com/GitMessengerBot/GitMessengerBot-Web/main/resource/drawable/banner.png"
+          property="og:image"/>
 
     <link rel="stylesheet" href="./resource/css/index.css"/>
-</head>
-<body>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"/>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<style>
+    body {
+        font-family: 'Nanum Gothic', sans-serif;
+        -webkit-font-smoothing: antialiased;
+    }
+</style>
+
+<body>
+<section class="full-screen">
+    <div class="splash-container">
+        <p id="title">GitMessengerBot</p>
+        <p id="subtitle">An awesome messenger auto-reply bot with `Git` service.</p>
+        <a class="btn-shadow" href="#main" style="margin-top: 80px;">자세히 알아보기</a>
+    </div>
+</section>
+<section class="full-screen" id="main">
+    <h1>GitMessengerBot2</h1>
+</section>
 </body>
 </html>
