--- a/404.html
+++ b/404.html
@@ -27,15 +27,18 @@
 
 <style>
     body {
-        overflow: hidden;
+        font-family: 'Nanum Gothic', sans-serif;
+        -webkit-font-smoothing: antialiased;
     }
 </style>
 
 <body class="full-screen">
-<div class="center-content">
-    <p id="title">Oops!</p>
-    <p id="subtitle">없는 페이지에요 :(</p>
-    <a class="btn-shadow" href="index.html" style="margin-top: 15px;"><p class="button-text">메인 페이지로</p></a>
+<div class="center-container">
+    <div class="center-content">
+        <p id="title">Oops!</p>
+        <p id="subtitle">없는 페이지에요 :(</p>
+        <a class="btn-shadow" href="index.html" style="margin-top: 15px;"><p class="button-text">메인 페이지로</p></a>
+    </div>
 </div>
 </body>
 </html>
