--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta content="https://raw.githubusercontent.com/GitMessengerBot/GitMessengerBot-Web/main/resource/drawable/banner.png"
           property="og:image"/>
 
+    <link rel="stylesheet" href="./resource/css/main.css"/>
     <link rel="stylesheet" href="./resource/css/index.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"/>
 
@@ -30,14 +31,20 @@
 
 <body>
 <section class="full-screen">
-    <div class="splash-container">
-        <p id="title">GitMessengerBot</p>
-        <p id="subtitle">An awesome messenger auto-reply bot with `Git` service.</p>
-        <a class="btn-shadow" href="#main" style="margin-top: 80px;">자세히 알아보기</a>
+    <div class="center-container">
+        <div class="center-content">
+            <p id="title">GitMessengerBot</p>
+            <p id="subtitle">세상에서 제일 좋은 메신저 봇 어플리케이션</p>
+            <a class="btn-shadow" href="#main" style="margin-top: 150px;"><p class="button-text">자세히 알아보기</p></a>
+        </div>
     </div>
 </section>
 <section class="full-screen" id="main">
-    <h1>GitMessengerBot2</h1>
+    <div class="center-container">
+        <div class="center-content">
+            <h1>왜 제일 좋나요?</h1>
+        </div>
+    </div>
 </section>
 </body>
 </html>
