--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 
     <link rel="stylesheet" href="./resource/css/main.css"/>
     <link rel="stylesheet" href="./resource/css/index.css"/>
+    <link rel="stylesheet" href="./resource/css/animation.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"/>
 
+    <script src="./resource/js/wow.js"></script>
+    <script>new WOW().init();</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -38,48 +41,61 @@
         </a>
     </section>
     <section style="height: 100%">
-        <div style="text-align: center; padding: 52px;">
-            <h1 id="why-world-best-good"><a href="#why-world-best-good"># 🤔 왜 제일 좋나요?</a></h1>
-            아래는 현재 많이 사용되는 메신저 봇 앱들이에요.<br/><br/><br/>
-            1. <a style="text-decoration: underline"
-                  href="https://play.google.com/store/apps/details?id=com.darktornado.chatbot">채팅 자동응답
-            봇</a><br/>
-            2. <a style="text-decoration: underline"
-                  href="https://play.google.com/store/apps/details?id=com.xfl.msgbot">메신저 자동응답 봇 R</a><br/><br/>
-            위 앱들은 Git 기능이 없고,
-            <a title="주로 쓰이는 언어들 기준" style="text-decoration: underline">지원 프로그래밍 언어</a>
-            가 적어요.<br/><br/><br/>
-            하지만 GitMessengerBot은<br/>자바스크립트, 타입스크립트, 파이썬 또는 단순 자동응답 설정만으로 이용할 수 있고,<br/>
-            npm과 Git 기능을 지원해요 👏👏<br/><br/>
-
-            추가로 💻Window/macOS 그리고 📱iPhone 전용 메신저 봇 시뮬레이터도 제공해요! 😎
-            <h1 id="need-help"><a href="#need-help"># 🙋 도움이 필요해요!</a></h1>
-            <h4 id="need-help-1"><a href="#need-help-1">🐛 앱에 버그가 있나요?</a></h4>
-            그렇다면 깃허브에 이슈를 남겨주세요! 그럼 신속한 업데이트가 가능하답니다 🤗<br/>
-            깃허브가 처음이시거나 미숙하신 분들은
-            <a href="#need-help-3" style="text-decoration: underline">여기</a>있는 메일 주소로 문의 부탁드려요!<br/><br/>
-            <h4 id="need-help-2"><a href="#need-help-2">😥 제가 짠 코드에서 오류가 계속 생겨요 ㅠㅠ</a></h4>
-            직접 작성하신 코드에서 오류가 발생하는건 고쳐드리가 힘들어요 😭<br/>
-            너그러운 마음으로 양해 부탁드려요 🙏🙏<br/><br/>
-            <h4 id="need-help-3"><a href="#need-help-3">🤙 다른 이유로 도움이 필요한데 어디로 연락하면 될까요?</a></h4>
-            ✉️ help@gitmessengerbot.xyz 으로 메일 주시면 최대한 빠른 시일 안에 답변 드릴게요!<br/><br/>
-            <h1 id="good-app-poo-web"><a href="#good-app-poo-web"># 💩 앱은 잘 만들었는데 웹은...?</a></h1>
-            제가 안드로이드 앱 프로그래밍이 메인이라 웹은 잘 못 해요 😅<br/>
-            웹은 그냥 참고용으로만 봐주세요 ㅎㅁㅎ
-            <h1 id="support-platform"><a href="#support-platform"># ✨ 지원 플렛폼</a></h1>
-            GitMessengerBot은 총 4가지 플렛폼을 지원해요.<br/><br/>
-            <p style="font-weight: bold">Window, macOS, Android, iOS</p>
-            Android만 메신저 봇 메인 기능을 이용하실 수 있고,<br/>
-            나머지 플렛폼들은 아직까지는 시뮬레이터만 이용 가능해요.<br/>
-            <h1 id="developers"><a href="#developers"># 🧑‍💻 그래서 누가 만들었나요?</a></h1>
-            GitMessengerBot은 1인개발 1인디자인(?) 프로젝트에요.<br/><br/>
-            <p style="font-weight: bold">
-                모든 개발: 지성빈(🏠 <a href="https://sungb.in" style="text-decoration: underline">sungb.in</a>)<br/>
-                모든 디자인: 구환
-            </p>
-            개발자가 1명인 만큼 개발 속도와 안정성에서 많이 미숙할 수 있어요.<br/>
-            이해 부탁드려요 ❤️‍🔥
-            <h1 id="download"><a href="#download"># 💖 다운로드</a></h1>
+        <div style="text-align: center;">
+            <div style="padding: 52px">
+                <div class="wow fadeInDown" data-wow-delay="0.5s">
+                    <h1 id="why-world-best-good"><a href="#why-world-best-good"># 🤔 왜 제일 좋나요?</a></h1>
+                    아래는 현재 많이 사용되는 메신저 봇 앱들이에요.<br/><br/><br/>
+                    1. <a style="text-decoration: underline"
+                          href="https://play.google.com/store/apps/details?id=com.darktornado.chatbot">채팅 자동응답
+                    봇</a><br/>
+                    2. <a style="text-decoration: underline"
+                          href="https://play.google.com/store/apps/details?id=com.xfl.msgbot">메신저 자동응답 봇 R</a><br/><br/>
+                    위 앱들은 Git 기능이 없고,
+                    <a title="주로 쓰이는 언어들 기준" style="text-decoration: underline">지원 프로그래밍 언어</a>
+                    가 적어요.<br/><br/><br/>
+                    하지만 GitMessengerBot은<br/>자바스크립트, 타입스크립트, 파이썬 또는 단순 자동응답 설정만으로 이용할 수 있고,<br/>
+                    npm과 Git 기능을 지원해요 👏👏<br/><br/>
+                    추가로 💻Window/macOS 그리고 📱iPhone 전용 메신저 봇 시뮬레이터도 제공해요! 😎
+                </div>
+                <div class="wow fadeInDown" data-wow-delay="0.5s">
+                    <h1 id="need-help"><a href="#need-help"># 🙋 도움이 필요해요!</a></h1>
+                    <h4 id="need-help-1"><a href="#need-help-1">🐛 앱에 버그가 있나요?</a></h4>
+                    그렇다면 <a href="https://github.com/GitMessengerBot" style="text-decoration: underline">깃허브</a>에 이슈를
+                    남겨주세요!
+                    그럼 신속한 업데이트가 가능하답니다 🤗<br/>
+                    깃허브가 처음이시거나 미숙하신 분들은
+                    <a href="#need-help-3" style="text-decoration: underline">여기</a>있는 메일 주소로 문의 부탁드려요!<br/><br/>
+                    <h4 id="need-help-2"><a href="#need-help-2">😥 제가 짠 코드에서 오류가 계속 생겨요 ㅠㅠ</a></h4>
+                    직접 작성하신 코드에서 오류가 발생하는건 고쳐드리가 힘들어요 😭<br/>
+                    너그러운 마음으로 양해 부탁드려요 🙏🙏<br/><br/>
+                    <h4 id="need-help-3"><a href="#need-help-3">🤙 다른 이유로 도움이 필요한데 어디로 연락하면 될까요?</a></h4>
+                    ✉️ help@gitmessengerbot.xyz 으로 메일 주시면 최대한 빠른 시일 안에 답변 드릴게요!<br/><br/>
+                </div>
+                <div class="wow fadeInDown" data-wow-delay="0.5s">
+                    <h1 id="good-app-poo-web"><a href="#good-app-poo-web"># 💩 앱은 잘 만들었는데 웹은...?</a></h1>
+                    제가 안드로이드 앱 프로그래밍이 메인이라 웹은 잘 못 해요 😅<br/>
+                    웹은 그냥 참고용으로만 봐주세요 ㅎㅁㅎ
+                </div>
+                <div class="wow fadeInDown" data-wow-delay="0.5s">
+                <h1 id="support-platform"><a href="#support-platform"># ✨ 지원 플렛폼</a></h1>
+                GitMessengerBot은 총 4가지 플렛폼을 지원해요.<br/><br/>
+                <p style="font-weight: bold">Window, macOS, Android, iOS</p>
+                Android만 메신저 봇 메인 기능을 이용하실 수 있고,<br/>
+                나머지 플렛폼들은 아직까지는 시뮬레이터만 이용 가능해요.<br/>
+                <h1 id="developers"><a href="#developers"># 🧑‍💻 그래서 누가 만들었나요?</a></h1>
+                GitMessengerBot은 1인개발 1인디자인(?) 프로젝트에요.<br/><br/>
+                <p style="font-weight: bold">
+                    모든 개발: 지성빈(🏠 <a href="https://sungb.in" style="text-decoration: underline">sungb.in</a>)<br/>
+                    모든 디자인: 아직비밀~
+                </p>
+                개발자가 1명인 만큼 개발 속도와 안정성에서 많이 미숙할 수 있어요.<br/>
+                이해 부탁드려요 ❤️‍🔥
+                </div>
+                <h1 id="download"><a href="#download"># 💖 다운로드</a></h1>
+                다운로드는 <a href="download.html" style="text-decoration: underline">이 페이지</a>에서 하실 수 있어요!
+            </div>
+            <p style="font-size: 10px">GitMessengerBot &copy; 2021 지성빈 & 구환. all rights reserved.</p>
         </div>
     </section>
 </div>
