--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h1 id="download"><a href="#download"># 💖 다운로드</a></h1>
                 다운로드는 <a href="download.html" style="text-decoration: underline">이 페이지</a>에서 하실 수 있어요!
             </div>
-            <p style="font-size: 10px">GitMessengerBot &copy; 2021 지성빈 & 구환. all rights reserved.</p>
+            <p style="font-size: 10px">GitMessengerBot &copy; 2021 지성빈 & . all rights reserved.</p>
         </div>
     </section>
 </div>
