--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body class="cover-container">
 <div class="cover-scroll">
     <section class="cover main">
-        <p id="title">GitMessengerBot</p>
+        <a id="title" href="https://gitmessengerbot.xyz">GitMessengerBot</a>
         <p id="subtitle">세상에서 제일 좋은 메신저 봇 어플리케이션</p>
         <a class="btn-shadow" href="#why-world-best-good" style="margin-top: 150px;"><p class="button-text">자세히 알아보기</p>
         </a>
@@ -78,24 +78,26 @@
                     웹은 그냥 참고용으로만 봐주세요 ㅎㅁㅎ
                 </div>
                 <div class="wow fadeInDown" data-wow-delay="0.5s">
-                <h1 id="support-platform"><a href="#support-platform"># ✨ 지원 플렛폼</a></h1>
-                GitMessengerBot은 총 4가지 플렛폼을 지원해요.<br/><br/>
-                <p style="font-weight: bold">Window, macOS, Android, iOS</p>
-                Android만 메신저 봇 메인 기능을 이용하실 수 있고,<br/>
-                나머지 플렛폼들은 아직까지는 시뮬레이터만 이용 가능해요.<br/>
-                <h1 id="developers"><a href="#developers"># 🧑‍💻 그래서 누가 만들었나요?</a></h1>
-                GitMessengerBot은 1인개발 1인디자인(?) 프로젝트에요.<br/><br/>
-                <p style="font-weight: bold">
-                    모든 개발: 지성빈(🏠 <a href="https://sungb.in" style="text-decoration: underline">sungb.in</a>)<br/>
-                    모든 디자인: 아직비밀~
-                </p>
-                개발자가 1명인 만큼 개발 속도와 안정성에서 많이 미숙할 수 있어요.<br/>
-                이해 부탁드려요 ❤️‍🔥
+                    <h1 id="support-platform"><a href="#support-platform"># ✨ 지원 플렛폼</a></h1>
+                    GitMessengerBot은 총 4가지 플렛폼을 지원해요.<br/><br/>
+                    <p style="font-weight: bold">Window, macOS, Android, iOS</p>
+                    Android만 메신저 봇 메인 기능을 이용하실 수 있고,<br/>
+                    나머지 플렛폼들은 아직까지는 시뮬레이터만 이용 가능해요.<br/>
+                    <h1 id="developers"><a href="#developers"># 🧑‍💻 그래서 누가 만들었나요?</a></h1>
+                    GitMessengerBot은 1인개발 1인디자인(?) 프로젝트에요.<br/><br/>
+                    <p style="font-weight: bold">
+                        모든 개발: 지성빈(🏠 <a href="https://sungb.in" style="text-decoration: underline">sungb.in</a>)<br/>
+                        모든 디자인: 아직비밀~
+                    </p>
+                    개발자가 1명인 만큼 개발 속도와 안정성에서 많이 미숙할 수 있어요.<br/>
+                    이해 부탁드려요 ❤️‍🔥
                 </div>
-                <h1 id="download"><a href="#download"># 💖 다운로드</a></h1>
-                다운로드는 <a href="download.html" style="text-decoration: underline">이 페이지</a>에서 하실 수 있어요!
+                <div class="wow fadeInDown" data-wow-delay="0.5s">
+                    <h1 id="download"><a href="#download"># 💖 다운로드</a></h1>
+                    다운로드는 <a href="download.html" style="text-decoration: underline">이 페이지</a>에서 하실 수 있어요!
+                </div>
             </div>
-            <p style="font-size: 10px">GitMessengerBot &copy; 2021 지성빈. all rights reserved.</p>
+            <p style="font-size: 10px">GitMessengerBot &copy; 2021 지성빈 & ???. all rights reserved.</p>
         </div>
     </section>
 </div>
