--- a/404.html
+++ b/404.html
@@ -16,8 +16,8 @@
     <meta content="https://raw.githubusercontent.com/GitMessengerBot/GitMessengerBot-Web/main/resource/drawable/banner.png"
           property="og:image"/>
 
-    <link rel="stylesheet" href="./resource/css/main.css"/>
-    <link rel="stylesheet" href="./resource/css/404.css"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="stylesheet" href="assets/css/404.css"/>
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
