--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <meta content="https://raw.githubusercontent.com/GitMessengerBot/GitMessengerBot-Web/main/resource/drawable/banner.png"
           property="og:image"/>
 
-    <link rel="stylesheet" href="./resource/css/main.css"/>
-    <link rel="stylesheet" href="./resource/css/index.css"/>
-    <link rel="stylesheet" href="./resource/css/animation.css"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="stylesheet" href="assets/css/index.css"/>
+    <link rel="stylesheet" href="assets/css/animation.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"/>
 
-    <script src="./resource/js/wow.js"></script>
+    <script src="assets/js/wow.js"></script>
     <script>new WOW().init();</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
